v 1.2.2
	Adding the default_per_page at the config file. This specifies the first visit per page that a user should see at the list page. For example 25 rows per page.
v 1.2.1.1
	Small bug fixes:
		#18 - Returning $this to all the callbacks methods.
		"set" type doesn't work properly.
v.1.2.1
	Adding languages: Afrikaans, Danish, Japanese, Romanian.
	Adding 3 new methods. unset_fields, unset_add_fields and unset_edit_fields.
	Renewing Javascripts: tinymce.
	Issue #14 - In firefox browser if you add more than one textarea. Only the last textarea works properly.
	Issue #16 - Flexigrid's Search string get garbled with multibyte string.
	Adding the "set" field type.
	Adding the "readonly" field type.
	Adding lang strings: "set_relation_title", "list_record", "form_inactive", "form_active";
v.1.2
	Adding languages: Arabic, Chinese, European Portuguese, German , Persian, Polish, Indonesian, Turkish, Ukrainian.
	Adding date format to the auto date fields. The format can be dd/mm/yyyy or mm/dd/yyyy or the old-one yyyy-mm-dd.
	Adding date-time format to the auto date-time fields. The format is chosen by the default date format (uk-date , us-date or sql-date).
	Adding a new uploader. Works with the most common browsers. Internet Explorer 8+, Mozilla Firefox, Google Chrome, Opera, Safari.
	Changing the interface of the form inputs. Now all the text inputs looks like bootstrap's inputs.
	Adding a where clause at the 4th argument to the simple set_relation method.
	Adding order by clause at the 5th argument to the simple set_relation method.
	Adding 3 new callbcaks, callback_upload, callback_before_upload, callback_after_upload.
	BUG fix - unset_jquery function now works properly.
	BUG fix #9 (The form's clear functionallity don't work properly after the insert). 
	RENAMING METHODS:
		callback_escape_insert to callback_insert, 
		callback_escape_update to callback_update, 
		callback_escape_delete to callback_delete
	RENAMING CLASSES: